--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -4,7 +4,7 @@
 
 .menu__title {
   text-align: center;
-  width: 59%;
+  width: 62%;
   margin: 0 auto 40px auto;
 }
 
